syntax = "proto3";

package blog;

option go_package = "blog/blogpb";
import "google/api/annotations.proto";


message Blog {
  string id = 1;
  string author_id = 2;
  string title = 3;
  string content = 4;
}

message CreateBlogRequest {
  Blog blog = 1;
}

message CreateBlogResponse {
  Blog blog = 1;
}

message ReadBlogRequest {
  string id = 1;
}

message ReadBlogResponse {
  Blog blog = 1;
}

message UpdateBlogRequest {
  Blog blog = 1;
}

message UpdateBlogResponse {
  Blog blog = 1;
}

message DeleteBlogRequest {
  string blog_id = 1;
}

message DeleteBlogResponse {
  string blog_id = 1;
}

message ListBlogsRequest {

}

message ListBlogsResponse {
   Blog blogs = 1;
}

service BlogService {
  rpc CreateBlog(CreateBlogRequest) returns (CreateBlogResponse) {
    option (google.api.http) = {
      post: "/create"
      body: "*"
    };
  }
  rpc ReadBlog(ReadBlogRequest) returns (ReadBlogResponse) {
    option (google.api.http) = {
      get: "/read/{id}"
  };
  }
  rpc UpdateBlog(UpdateBlogRequest) returns (UpdateBlogResponse) {} ;
  rpc DeleteBlog(DeleteBlogRequest) returns (DeleteBlogResponse) {} ;
  rpc ListBlogs(ListBlogsRequest) returns (stream ListBlogsResponse) {} ;
}
